--- a/template/report/main.tex
+++ b/template/report/main.tex
@@ -46,8 +46,8 @@
 
 \pagestyle{fancy}
 \fancyfoot{}
+\fancyhead[L]{Introduction to Embedded Systems Design and Implementation}
 \fancyhead[R]{Page \thepage}
-\fancyhead[L]{課程:DCP3516 嵌入式系統設計概論與實作}
 \definecolor{deeper}{gray}{.8}
 
 \renewcommand*{\ttdefault}{pcr}
